chore: customize lass skeleton

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hebo-event-repository-dynamodb",
   "description": "Event Repository implementation for hebo-js that uses AWS DynamoDb",
   "version": "0.1.0",
-  "author": "Steve Caldwell <scaldwell@gmail.com> ()",
+  "author": "Steve Caldwell <scaldwell@gmail.com>",
   "ava": {
     "failFast": true,
     "verbose": true
@@ -17,7 +17,7 @@
     ]
   },
   "contributors": [
-    "Steve Caldwell <scaldwell@gmail.com> ()"
+    "Steve Caldwell <scaldwell@gmail.com>"
   ],
   "dependencies": {},
   "devDependencies": {
@@ -89,7 +89,8 @@
   "prettier": {
     "singleQuote": true,
     "bracketSpacing": true,
-    "trailingComma": "none"
+    "trailingComma": "all",
+    "tabWidth": 4
   },
   "remarkConfig": {
     "plugins": [
@@ -110,9 +111,21 @@
   },
   "xo": {
     "prettier": true,
-    "space": true,
+    "space": 4,
     "extends": [
       "xo-lass"
-    ]
+    ],
+    "parserOptions": {
+      "sourceType": "module"
+    },
+    "rules": {
+      "max-len": [
+        "error",
+        {
+          "code": 80,
+          "ignoreUrls": true
+        }
+      ]
+    }
   }
 }
