--- a/package.json
+++ b/package.json
@@ -19,25 +19,30 @@
   "contributors": [
     "Steve Caldwell <scaldwell@gmail.com>"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@aws/dynamodb-query-iterator": "^0.7.1"
+  },
   "devDependencies": {
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "latest",
-    "ava": "latest",
-    "codecov": "latest",
-    "cross-env": "latest",
-    "eslint": "latest",
-    "eslint-config-prettier": "latest",
-    "eslint-config-xo-lass": "latest",
-    "eslint-plugin-prettier": "latest",
-    "fixpack": "latest",
-    "husky": "latest",
-    "lint-staged": "latest",
-    "nyc": "latest",
-    "prettier": "latest",
-    "remark-cli": "latest",
-    "remark-preset-github": "latest",
-    "xo": "latest"
+    "@commitlint/cli": "^7.2.0",
+    "@commitlint/config-conventional": "^7.1.2",
+    "ava": "^0.25.0",
+    "aws-sdk": "^2.332.0",
+    "codecov": "^3.1.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-xo-lass": "^1.0.3",
+    "eslint-plugin-prettier": "^3.0.0",
+    "fixpack": "^2.3.1",
+    "hebo": "^0.3.3",
+    "husky": "^1.1.1",
+    "lint-staged": "^7.3.0",
+    "nyc": "^13.0.1",
+    "prettier": "^1.14.3",
+    "remark-cli": "^5.0.0",
+    "remark-preset-github": "^0.0.9",
+    "shortid": "^2.2.13",
+    "xo": "^0.23.0"
   },
   "engines": {
     "node": ">=8.3"
@@ -85,6 +90,10 @@
       "html",
       "text"
     ]
+  },
+  "peerDependencies": {
+    "aws-sdk": "^2.332.0",
+    "hebo": "^0.3.3"
   },
   "prettier": {
     "singleQuote": true,
