--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "Steve Caldwell <scaldwell@gmail.com>"
   ],
   "dependencies": {
+    "@aws/dynamodb-auto-marshaller": "^0.7.1",
+    "@aws/dynamodb-expressions": "^0.7.3",
     "@aws/dynamodb-query-iterator": "^0.7.1",
-    "hebo-validation": "^2.0.0"
+    "hebo-validation": "^3.0.0",
+    "lodash": "^4.17.11",
+    "memoizee": "^0.4.14"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.0",
@@ -30,6 +34,7 @@
     "aws-sdk": "^2.332.0",
     "codecov": "^3.1.0",
     "cross-env": "^5.2.0",
+    "dynalite": "^2.0.0",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-xo-lass": "^1.0.3",
@@ -93,7 +98,7 @@
   },
   "peerDependencies": {
     "aws-sdk": "^2.332.0",
-    "hebo": "^1.0.0"
+    "hebo": "^2.0.0"
   },
   "prettier": {
     "singleQuote": true,
