--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
   },
   "peerDependencies": {
     "aws-sdk": "^2.332.0",
-    "hebo": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "hebo": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "prettier": {
     "singleQuote": true,
